little bug fix at about.css (the footer was not vertical-aligned)

--- a/public/styles/about.css
+++ b/public/styles/about.css
@@ -1,4 +1,4 @@
-p {
+.content p {
     color: #444444;
     font-size: 18px;
     line-height: 28px;
